# starknet-privacy

./: .gitignore  .tool-versions  CLAUDE.md  Cargo.toml  DEFERRED_APPLY_DEPLOY.md  HACKATHON_VIDEO_PRODUCTION.md  OTC_HACKATHON_DECK.md  OTC_HACKATHON_DECK.pptx  OTC_HACKATHON_PRESENTATION.md  PROVING_SERVICE_GUIDE.md  README.md  Scarb.toml  py_requirements.txt  rust-toolchain.toml  starknet-privacy.code-workspace
.claude/: CLAUDE.md  settings.json
.claude/commands/: code-guidelines.md
.claude/rules/: auto-update-guidelines.md  code-review.md  code-style.md  debugging.md  demo.md  testing.md  verification.md
.github/scripts/: pr_title_lint.py
.github/workflows/: autoupdate.yaml  cairo-ci.yaml  check-class-hashes.yaml  check_formatting.yaml  client-ci.yml  demo-deploy.yml  discovery-service-docker.yaml  discovery-service.yml  docker.yaml  docs.yaml  e2e-devnet.yaml  e2e-integration.yaml  notify-slack.yaml  on-merge.yaml  on-pull-request.yaml  pr-title-lint.yaml  proof-interceptor-docker.yaml  proving-service-docker.yaml  proxy-ci.yml  rust-ci.yaml  sdk-check.yml  sdk-integration.yml  sdk-publish-prerelease.yml  test.yaml  typescript-ci.yml
.husky/: commit-msg  pre-commit  pre-push
client/: README.md  eslint.config.js  package-lock.json  package.json  vitest.config.ts
client/docs/: avnu-paymaster-local-devnet.md
client/scripts/: publish-sdk-dep.mjs
client/src/: builder.ts  calls.ts  client.ts  index.ts  interfaces.ts  paymaster.ts  sdk-wallet.ts  strk20-prover.ts  sub-accounts.ts  viewing-key.ts
client/tests/: client.test.ts  integration.test.ts  paymaster.test.ts  sdk-wallet.test.ts  strk20-prover.test.ts  sub-accounts.test.ts  viewing-key.test.ts
crates/discovery-core/: Cargo.toml  README.md
crates/discovery-core/src/: decryption.rs  events_backend.rs  hashes.rs  io_budget.rs  lib.rs  mock_backend.rs  rpc_backend.rs  snip12.rs  storage.rs  storage_backend.rs  storage_slots.rs  test_fixtures.rs  types.rs
crates/discovery-core/src/backends/: mock.rs  mod.rs
crates/discovery-core/src/discovery/: cursor.rs  incoming_channels.rs  last_note_index.rs  mod.rs  notes.rs  outgoing_channels.rs  preflight.rs  subchannels.rs
crates/discovery-core/src/history/: client_actions.rs  mod.rs  note_events.rs  notes.rs  onchain_events.rs  transactions.rs  types.rs
crates/discovery-core/src/privacy_pool/: decryption.rs  events.rs  hashes.rs  keys.rs  mod.rs  storage_slots.rs  types.rs  views.rs
crates/discovery-core/src/sync/: incoming_state.rs  mod.rs  outgoing_state.rs  preflight_check.rs
crates/discovery-core/tests/: integration.rs
crates/discovery-core/tests/fixtures/: cairo-reference-data.json  devnet-state.json
crates/discovery-service/: Cargo.toml  README.md
crates/discovery-service/specs/: 01-summary.md  04-proposed-architecture.md  05-security-considerations.md  06-api-design.md  08-error-handling.md  10-contract-versioning.md  12-key-management.md  16-operational-monitoring.md  17-cold-start-and-backfill.md  18-configuration.md  19-scaling-and-capacity.md  20-ohttp-integration.md  README.md
crates/discovery-service/src/: api_server.rs  chain_state.rs  config.rs  indexer.rs  lib.rs  main.rs  public_key_cache.rs  rpc_backend.rs  shutdown.rs  store.rs  stub_class_manager.rs
crates/discovery-service/src/api/: access_log.rs  block_id_serde.rs  handlers.rs  mod.rs  request_span.rs  types.rs  validators.rs
crates/discovery-service/src/incoming_sync/: discovery.rs  handler.rs  mod.rs  types.rs  validation.rs
crates/discovery-service/src/ohttp/: gateway.rs  handlers.rs  layer.rs  mod.rs
crates/discovery-service/src/outgoing_sync/: handler.rs  mod.rs  types.rs
crates/discovery-service/src/preflight/: handler.rs  mod.rs  types.rs
crates/discovery-service/tests/: devnet.rs  indexer.rs  integration.rs  node.rs  test_api.rs  test_indexer.rs  test_rpc_backend.rs  test_tls.rs
crates/discovery-service/tests/common/: devnet.rs  indexer.rs  mod.rs  process.rs
crates/discovery-service/tests/fixtures/: devnet-dump.metadata.json
crates/discovery-service/tests/helpers/: devnet.rs  indexer.rs  mod.rs  privacy.rs  sncast.rs
crates/solvency-audit/: Cargo.toml
crates/solvency-audit/src/: backend.rs  error.rs  fetch.rs  infra_slots.rs  lib.rs  owned_slots.rs  snapshot.rs  state_source.rs  walk.rs  work.rs
demo/: .env.example  .env.mainnet.example  .env.testnet  .gitignore  DEPLOY.md  README.md  check-nullifier.mjs  discovery-service.toml  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts  wallet.html
demo/scripts/: set-vercel-env.sh
demo/src/: App.css  App.tsx  argent-signer.ts  avnu.ts  config.ts  format.ts  paymaster.ts  proof-provider.ts  session.ts  starknet.ts  timeline.ts
deploy/discovery-service/: Dockerfile  (+2 more)
devnet_tests/: conftest.py  test.py
e2e/: .env.example  README.md  accounts.json  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
elliptic-proxy/: .gcloudignore  README.md  design.md  elliptic-proxy-config.json  package-lock.json  package.json  plan.md  tsconfig.json
findings/: hunter-1.md  hunter-10.md  hunter-11.md  hunter-12.md  hunter-13.md  hunter-14.md  hunter-15.md  hunter-16.md  hunter-2.md  hunter-3.md  hunter-4.md  hunter-5.md  hunter-6.md  hunter-7.md  hunter-8.md  hunter-9.md  master-report.md  supervisor-1.md  supervisor-2.md  supervisor-3.md  supervisor-4.md
fixtures/: screening-vectors.json
lean/: lake-manifest.json  lakefile.lean
proof-interceptor/: Dockerfile  README.md  package-lock.json  package.json
prover-proxy/: package-lock.json  package.json  vitest.config.ts
scripts/: check_class_hashes.sh  deploy.py  gen_cairo_screening_vectors.mjs  gen_cairo_screening_vectors.py  gen_screening_fixtures.py  python_tests.sh  resolve_test_conflicts.py
sdk/: .gitignore  .prettierignore  CHANGELOG.md  README.md  cairo.patch  commitlint.config.js  eslint.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts  vitest.integration.config.ts
video_assets/: concat.txt  generate_narration.py
(+612 files in other folders)
