[workspace]
resolver = "2"
members = [
    "crates/discovery-core",
    "crates/discovery-service",
]

[patch.crates-io]
starknet-core = { git = "https://github.com/starkware-libs/starknet-rs.git", branch = "get-storage-at-flags" }
starknet-providers = { git = "https://github.com/starkware-libs/starknet-rs.git", branch = "get-storage-at-flags" }
