[package]
name = "discovery-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
num-traits = "0.2"
starknet-core = "0.16"
starknet-crypto = "0.8"
starknet-types-core = { version = "0.2", features = ["curve"] }
starknet-providers = "0.16"
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
