[package]
name = "discovery-core"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
async-trait = "0.1"
num-traits = "0.2"
starknet-core = "0.16"
starknet-crypto = "0.8"
starknet-types-core = { version = "0.2", features = ["curve", "serde"] }
starknet-providers = "0.16"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
url = "2"
futures = "0.3"
zeroize = "1"

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
