[package]
name = "discovery-core"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
async-trait = "0.1"
num-traits = "0.2"
starknet-core = { package = "starknet-rust-core", git = "https://github.com/software-mansion/starknet-rust.git", rev = "7caedfe" }
starknet-crypto = { package = "starknet-rust-crypto", git = "https://github.com/software-mansion/starknet-rust.git", rev = "7caedfe" }
starknet-types-core = { version = "0.2", features = ["curve", "serde"] }
starknet-providers = { package = "starknet-rust-providers", git = "https://github.com/software-mansion/starknet-rust.git", rev = "7caedfe" }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
url = "2"
futures = "0.3"
zeroize = "1"

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
