[package]
name = "discovery-service"
version = "0.1.0"
edition = "2021"

[lib]
name = "discovery_service"
path = "src/lib.rs"

[[bin]]
name = "discovery-service"
path = "src/main.rs"

[dependencies]
# Internal
discovery-core = { path = "../discovery-core" }

# Async
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "process", "io-util"] }

# StarkNet
starknet = "0.17"
starknet-core = "0.16"
starknet-providers = "0.16"
starknet-types-core = "0.2"
starknet-tokio-tungstenite = "0.3"
url = "2"

# HTTP
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
reqwest = { version = "0.12", features = ["json"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["cors", "timeout"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2"
backoff = { version = "0.4", features = ["tokio"] }

# Crypto
starknet-crypto = "0.8"

# Cache
moka = { version = "0.12", features = ["sync"] }

# Configuration
toml = "0.8"
regex = "1"

# CLI and logging
clap = { version = "4", features = ["derive"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
anyhow = "1.0"
expect-test = "1.5"
flate2 = "1.0"
libc = "0.2"
nix = { version = "0.29", features = ["signal"] }
serde_json = "1.0"
starknet-core = "0.16"
starknet-types-core = { version = "0.2", features = ["serde"] }
rcgen = "0.13"
tempfile = "3"
