[package]
name = "discovery-service"
version = "0.1.0"
edition = "2021"

[lib]
name = "discovery_service"
path = "src/lib.rs"

[[bin]]
name = "discovery-service"
path = "src/main.rs"

[dependencies]
# Internal
discovery-core = { path = "../discovery-core" }

# Async
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "process", "io-util"] }

# StarkNet
starknet-core = { package = "starknet-rust-core", git = "https://github.com/software-mansion/starknet-rust.git", rev = "7caedfe" }
starknet-providers = { package = "starknet-rust-providers", git = "https://github.com/software-mansion/starknet-rust.git", rev = "7caedfe" }
starknet-types-core = "0.2"
starknet-tokio-tungstenite = { package = "starknet-rust-tokio-tungstenite", git = "https://github.com/software-mansion/starknet-rust.git", rev = "7caedfe" }
url = "2"

# HTTP
axum = "0.8"
http-body-util = "0.1"
reqwest = { version = "0.13", features = ["json"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
tls-listener = { version = "0.11", features = ["rustls-ring", "axum"] }
tokio-rustls = "0.26"
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["cors", "timeout"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

# Error handling
thiserror = "2"
backoff = { version = "0.4", features = ["tokio"] }

# Crypto
starknet-crypto = { package = "starknet-rust-crypto", git = "https://github.com/software-mansion/starknet-rust.git", rev = "7caedfe" }

# OHTTP (RFC 9458)
tower_ohttp = { git = "https://github.com/starkware-libs/sequencer.git", rev = "3eb55733b7a3a5aa00a22618fc619272a17e7943" }

# Cache
moka = { version = "0.12", features = ["sync"] }

# Configuration
toml = "0.8"
regex = "1"

# CLI and logging
clap = { version = "4", features = ["derive"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
anyhow = "1.0"
tower_ohttp = { git = "https://github.com/starkware-libs/sequencer.git", rev = "3eb55733b7a3a5aa00a22618fc619272a17e7943", features = ["testing"] }
expect-test = "1.5"
flate2 = "1.0"
libc = "0.2"
nix = { version = "0.29", features = ["signal"] }
serde_json = "1.0"
starknet-core = { package = "starknet-rust-core", git = "https://github.com/software-mansion/starknet-rust.git", rev = "7caedfe" }
starknet-types-core = { version = "0.2", features = ["serde"] }
rcgen = "0.13"
tempfile = "3"
